[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/UI/MainMenu/return_to_title.gd" type="Script" id=1]
[ext_resource path="res://Assets/fonts/Teko-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/images/env/Level_ExtremeBackground_01.png" type="Texture" id=3]
[ext_resource path="res://src/UI/Fonts/Teko-Regular.ttf" type="DynamicFontData" id=4]


[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 2
outline_color = Color( 0.607843, 0.0941176, 0.0941176, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level_ExtremeBackground_01" type="Sprite" parent="."]
position = Vector2( 730.443, 562.896 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 60.0
margin_right = -60.0
margin_bottom = -60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1800.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
text = "Credits"
align = 1

[node name="Description" type="Label" parent="VBoxContainer"]
margin_top = 91.0
margin_right = 1800.0
margin_bottom = 388.0
custom_fonts/font = SubResource( 2 )
text = "Ben Wei
Chris Chan
Chris Leon
Franky Kohn
Greg Wolff
Pi"
align = 1

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 392.0
margin_right = 1800.0
margin_bottom = 467.0
custom_fonts/font = SubResource( 3 )
text = "Back"
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
